--- a/comparison.html
+++ b/comparison.html
@@ -19,7 +19,7 @@
     
     <title>Weather Analysis Visualization</title>
 </head>
-<body style="background-color: lightgray">
+<body style="background-color: rgb(243, 205, 205)">
         
         <nav class="navbar navbar-inverse">
             <div class="container">
