--- a/humidity.html
+++ b/humidity.html
@@ -35,10 +35,10 @@
                     <div class="nav navbar-nav navbar-right">
                         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown">Plots<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="temperature.html">Max Temperature</a></li>
+                                <li><a href="max_temp.html">Max Temperature</a></li>
                                 <li><a href="humidity.html">Humidity</a></li>
                                 <li><a href="cloudiness.html">Cloudiness</a></li>
-                                <li><a href="windspeed.html">Wind Speed</a></li>
+                                <li><a href="wind_speed.html">Wind Speed</a></li>
                             </ul>
                         </li>
                         <li><a href="comparison.html"> Comparison</a></li>
