--- a/comparison.html
+++ b/comparison.html
@@ -58,7 +58,7 @@
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                     <h3 class = "text-center" >vs. Max Temperture</h3>
-                                    <a href="temperature.html"><img class = "img img-responsive" src="Resources/assets/images/Fig1.png" style="width:80%" alt=""></a></div>
+                                    <a href="max_temp.html"><img class = "img img-responsive" src="Resources/assets/images/Fig1.png" style="width:80%" alt=""></a></div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                     <h3 class = "text-center">vs. Humidity</h3>
                                     <a href="humidity.html"><img class = "img img-responsive" src="Resources/assets/images/Fig2.png" style="width:80%" alt=""></a></div>
@@ -70,7 +70,7 @@
                                     <a href="cloudiness.html"><img class = "img img-responsive" src="Resources/assets/images/Fig3.png" style="width:80%" alt=""></a></div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                     <h3 class = "text-center">vs. Wind Speed</h3>
-                                    <a href="windspeed.html"><img class = "img img-responsive" src="Resources/assets/images/Fig4.png" style="width:80%" alt=""></a></div>
+                                    <a href="wind_speed.html"><img class = "img img-responsive" src="Resources/assets/images/Fig4.png" style="width:80%" alt=""></a></div>
                             </div>
                                         
                     </div>
