--- a/comparison.html
+++ b/comparison.html
@@ -53,7 +53,8 @@
 
                             <h2>Latitude vs. X</h2>
                             <hr>
-                            <p class="p1">Click on any plot to get an in-depth analysis.</p>
+                            <p style="font-size:50px;">Click on a plot for an more in-depth analysis.</p>
+                            <p class="p1">Click on a plot for an more in-depth analysis.</p>
 
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
