--- a/max_temp.html
+++ b/max_temp.html
@@ -53,7 +53,7 @@
 
                             <h2>Temperature</h2>
                             <hr>
-                            <img class="image" src="Resources/assets/images/Fig1.png" alt="temperature image" >
+                            <img class="image" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\TaylorArnold93.github.io-WebVisualizationDashboard-Latitude-\Resources\assets\images\Fig1.png" alt="temperature image" >
                             <p class="p1">As expected the weather becomes warmer as one approaches towards the equator (latitude 0 deg). More interestingly, however is the fact that the southern hemisphere tends to be warmer at this time of the year than the northern hemisphere.</p>
                         <br>        
                         </div>
@@ -66,12 +66,12 @@
                                 <hr>
 
                                 <div class="row">
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="max_temp.html"><img class = "img img-responsive" src="Resources/assets/images/Fig1.png" style="width:100%" alt=""></a></div>
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="Resources/assets/images/Fig2.png" style="width:100%" alt=""></a></div>
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="max_temp.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\TaylorArnold93.github.io-WebVisualizationDashboard-Latitude-\Resources\assets\images\Fig1.png" style="width:100%" alt=""></a></div>
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\TaylorArnold93.github.io-WebVisualizationDashboard-Latitude-\Resources\assets\images\Fig2.png" style="width:100%" alt=""></a></div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="cloudiness.html"><img class = "img img-responsive" src="Resources/assets/images/Fig3.png" style="width:100%" alt=""></a></div>
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="wind_speed.html"><img class = "img img-responsive" src="Resources/assets/images/Fig4.png" style="width:100%" alt=""></a></div>
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="cloudiness.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\TaylorArnold93.github.io-WebVisualizationDashboard-Latitude-\Resources\assets\images\Fig3.png" style="width:100%" alt=""></a></div>
+                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="wind_speed.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\TaylorArnold93.github.io-WebVisualizationDashboard-Latitude-\Resources\assets\images\Fig4.png" style="width:100%" alt=""></a></div>
                                 </div>
                                     
                             </div>
