--- a/cloudiness.html
+++ b/cloudiness.html
@@ -50,7 +50,7 @@
 
                         <h2>Cloudiness</h2>
                         <hr>
-                        <img class= "image" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\TaylorArnold93.github.io-WebVisualizationDashboard-Latitude-\Resources\assets\images\Fig3.png"  alt="cloudiness" >
+                        <img class= "image" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig3.png"  alt="cloudiness" >
                         <p class="p1">As we can see, there is no direct correlation between cloudiness and the latitude of the place. However, we can see that at this time of the year, there are many cities that have 0% cloudiness and many cities that have 70-80% cloudiness.</p>
                     <br>        
                     </div>
@@ -63,12 +63,12 @@
                             <hr>
 
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="max_temp.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\TaylorArnold93.github.io-WebVisualizationDashboard-Latitude-\Resources\assets\images\Fig1.png" style="width:100%" alt=""></a></div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\TaylorArnold93.github.io-WebVisualizationDashboard-Latitude-\Resources\assets\images\Fig2.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="max_temp.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig1.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig2.png" style="width:100%" alt=""></a></div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="cloudiness.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\TaylorArnold93.github.io-WebVisualizationDashboard-Latitude-\Resources\assets\images\Fig3.png" style="width:100%" alt=""></a></div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="wind_speed.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\TaylorArnold93.github.io-WebVisualizationDashboard-Latitude-\Resources\assets\images\Fig4.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="cloudiness.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig3.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="wind_speed.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig4.png" style="width:100%" alt=""></a></div>
                             </div>
                                 
                         </div>
