--- a/comparison.html
+++ b/comparison.html
@@ -58,19 +58,19 @@
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                     <h3 class = "text-center" >vs. Max Temperture</h3>
-                                    <a href="max_temp.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig1.png" style="width:80%" alt=""></a></div>
+                                    <a href="max_temp.html"><img class = "img img-responsive" src="Resources\assets\images\Fig1.png" style="width:80%" alt=""></a></div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                     <h3 class = "text-center">vs. Humidity</h3>
-                                    <a href="humidity.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig2.png" style="width:80%" alt=""></a></div>
+                                    <a href="humidity.html"><img class = "img img-responsive" src="Resources\assets\images\Fig2.png" style="width:80%" alt=""></a></div>
                             </div>
 
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                     <h3 class = "text-center">vs. Cloudiness</h3>
-                                    <a href="cloudiness.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig3.png" style="width:80%" alt=""></a></div>
+                                    <a href="cloudiness.html"><img class = "img img-responsive" src="Resources\assets\images\Fig3.png" style="width:80%" alt=""></a></div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                                     <h3 class = "text-center">vs. Wind Speed</h3>
-                                    <a href="wind_speed.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig4.png" style="width:80%" alt=""></a></div>
+                                    <a href="wind_speed.html"><img class = "img img-responsive" src="Resources\assets\images\Fig4.png" style="width:80%" alt=""></a></div>
                             </div>
                                         
                     </div>
