--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <h2>Summary: Latitude vs Longitude</h2>
                     <hr>
-                    <img src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig1.png" height="300" width="350" align="left" alt="first image" >
+                    <img src="Resources\assets\images\Fig1.png" height="300" width="350" align="left" alt="first image" >
                     <p class="p1">The purpose of this project was to analyze how weather changes as you get close to the equator.To accomplish this analysis we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
                      <p class= "p1">After assembling the dataset, we used Matplotlib to plot various aspects of weather vs. latitude. Factors we looked at included: temperatue, cloudiness, wind speed and humidity. This site provides the source data and visualizations 
                                     created as part of the analysis as well as explanations and descriptions of any trends and correlations witnessed.
@@ -74,12 +74,12 @@
                             <hr>
 
                             <div class="row" >
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="max_temp.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig1.png" style="width:100%" alt=""></a></div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig2.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="max_temp.html"><img class = "img img-responsive" src="Resources\assets\images\Fig1.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="Resources\assets\images\Fig2.png" style="width:100%" alt=""></a></div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="cloudiness.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig3.png" style="width:100%" alt=""></a></div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="wind_speed.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig4.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="cloudiness.html"><img class = "img img-responsive" src="Resources\assets\images\Fig3.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="wind_speed.html"><img class = "img img-responsive" src="Resources\assets\images\Fig4.png" style="width:100%" alt=""></a></div>
                             </div>
                                 
                         </div>
