--- a/wind_speed.html
+++ b/wind_speed.html
@@ -52,7 +52,7 @@
 
                         <h2>Wind Speed</h2>
                         <hr>
-                        <img class="image" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig4.png" alt="Wind Speed image">
+                        <img class="image" src="Resources\assets\images\Fig4.png" alt="Wind Speed image">
                         <p class="p1">From the Latitude vs. Wind Speed chart we can see that, most of the cities have wind speed between 0 mph-10 mph. </p>
                     <br>        
                     </div>
@@ -65,12 +65,12 @@
                             <hr>
 
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="max_temp.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig1.png" style="width:100%" alt=""></a></div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig2.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="max_temp.html"><img class = "img img-responsive" src="Resources\assets\images\Fig1.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="humidity.html"><img class = "img img-responsive" src="Resources\assets\images\Fig2.png" style="width:100%" alt=""></a></div>
                             </div>
                             <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="cloudiness.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig3.png" style="width:100%" alt=""></a></div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="wind_speed.html"><img class = "img img-responsive" src="C:\Users\taylo\Documents\UCI Bootcamp 2020\UCI_HomeWork_Taylor_Wolff\11-Web-Design-Challenge\Resources\assets\images\Fig4.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="cloudiness.html"><img class = "img img-responsive" src="Resources\assets\images\Fig3.png" style="width:100%" alt=""></a></div>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"><a href="wind_speed.html"><img class = "img img-responsive" src="Resources\assets\images\Fig4.png" style="width:100%" alt=""></a></div>
                             </div>
                                 
                         </div>
